refactor(e2e): extract KubectlPortForward helper; clean up StateFunK8sE2E
- KubectlPortForward: AutoCloseable wrapper around 'kubectl port-forward',
  supports fixed and ephemeral local ports. Removes ~80 lines of
  ProcessBuilder boilerplate from the test.
- StateFunK8sE2E:
  - @Tag("kafka") for suite selection via -Dgroups
  - stream-based record collection (StreamSupport + Collectors) instead
    of for-loops over ConsumerRecords
  - method-reference style parsers
  - try-with-resources-friendly port-forward lifecycle via AutoCloseable
  - test names simplified (protobufCounterFunctionSumsDeltas)